--- a/AndrewLoginPage/LoginPage/src/app/app.component.html
+++ b/AndrewLoginPage/LoginPage/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-account-creation></app-account-creation>
+<!-- <app-account-creation></app-account-creation> -->
+<app-homepage></app-homepage>
