--- a/AndrewLoginPage/LoginPage/src/app/homepage/homepage.component.html
+++ b/AndrewLoginPage/LoginPage/src/app/homepage/homepage.component.html
@@ -13,7 +13,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4">
-      <h4 class="text-center">Events</h4>
+      <h4 class="text-center">My Events</h4>
       <table class="table table-striped">
           <thead>
             <tr>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="col-md-4">
-      <h4 class="text-center">Equipment</h4>
+      <h4 class="text-center">My Equipment</h4>
       <table class="table table-striped">
           <thead>
             <tr>
@@ -81,7 +81,7 @@
 
 
     <div class="col-md-4">
-      <h4 class="text-center">Vehicles</h4>
+      <h4 class="text-center">My Vehicles</h4>
       <table class="table table-striped">
           <thead>
             <tr>
@@ -115,6 +115,8 @@
     </div>
   </div>
 
+  <h1>Points</h1>
+  <h1>My Manager</h1>
 
 </div>
 
