--- a/AndrewLoginPage/LoginPage/src/app/homepage/homepage.component.css
+++ b/AndrewLoginPage/LoginPage/src/app/homepage/homepage.component.css
@@ -12,7 +12,7 @@
     background-size: cover;
   }
 
-  h2, h4, th, td {
+  h2, h4, th, td, h1 {
       color: #FFFFFF;
       position: relative;
       z-index: 10;
