Starting the log on page

--- a/login_styles.css
+++ b/login_styles.css
@@ -1,10 +1,9 @@
-.login_button {
-    text-align: center;
-}
-
 #login {
-    position: absolute;
-    top: 50%;
+   
+    display:flex;
+    justify-content:flex-end;
+    align-items:center;
+
 }
 
 .p-3 {
