list view and claim event

--- a/AndrewLoginPage/LoginPage/src/app/app.component.html
+++ b/AndrewLoginPage/LoginPage/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-account-creation></app-account-creation> -->
-<app-homepage></app-homepage>
+<!-- <app-homepage></app-homepage> -->
+<app-event></app-event>
