--- a/AndrewLoginPage/LoginPage/src/app/homepage/homepage.component.html
+++ b/AndrewLoginPage/LoginPage/src/app/homepage/homepage.component.html
@@ -6,7 +6,7 @@
   <br>
   <br>
 
-<h2 class="text-center">Welcome User!{{ user.name }} </h2>
+<h2 class="text-center">Welcome User! </h2>
 <br>
 <br>
 
