Fix the folder tornado of death and punishment

--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-account-creation></app-account-creation> -->
 <!-- <app-homepage></app-homepage> -->
 <app-calendar></app-calendar>
+<!-- <app-event></app-event> -->
