Added vehicles table as component

--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-account-creation></app-account-creation> -->
 <!-- <app-homepage></app-homepage> -->
-<app-calendar></app-calendar>
+<!-- <app-calendar></app-calendar> -->
 <!-- <app-event></app-event> -->
+<app-vehicle></app-vehicle>
