--- a/Angular Project/src/app/equipment/equipment.component.css
+++ b/Angular Project/src/app/equipment/equipment.component.css
@@ -15,7 +15,7 @@ nav{
   height: 100vh;
 }
 #blueHomeCenter {
-  background-image: url("../../assets/newsreporter.png");
+  background-image: url("../../assets/camera.jpg");
   height: 100vh;
   background-size: cover;
 }
