--- a/Angular Project/src/app/equipment/equipment.component.html
+++ b/Angular Project/src/app/equipment/equipment.component.html
@@ -49,7 +49,7 @@
       <thead>
         <tr>
           <th scope="col">Type</th>
-          <th scope="col">Date</th>
+          <th scope="col">ID</th>
           <th scope="col">Time</th>
           <th scope="col">Available</th>
           <th scope="col">Reserve</th>
@@ -57,8 +57,8 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">Royal Wedding</th>
-          <td>11/10/18</td>
+          <th scope="row">Camera</th>
+          <td>1</td>
           <td>2:00pm</td>
           <td>No</td>
           <td>
@@ -66,37 +66,10 @@
           </td>
         </tr>
         <tr>
-          <th scope="row">Zoo Grand Opening</th>
-          <td>1/3/19</td>
+          <th scope="row">Tripod</th>
+          <td>2</td>
           <td>11:00am</td>
           <td>No</td>
-          <td>
-            <button class="btn btn-primary">Claim</button>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">Skating Rink Opening</th>
-          <td>3/10/19</td>
-          <td>5:00pm</td>
-          <td>No</td>
-          <td>
-            <button class="btn btn-primary">Claim</button>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">City Iron Man Contest</th>
-          <td>5/16/19</td>
-          <td>9:00am</td>
-          <td>Yes</td>
-          <td>
-            <button class="btn btn-primary">Claim</button>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">City Festival</th>
-          <td>7/20/19</td>
-          <td>4:00pm</td>
-          <td>Yes</td>
           <td>
             <button class="btn btn-primary">Claim</button>
           </td>
