anchor component vertical slice finished (we think)

--- a/Angular Project/src/app/account-creation/account-creation.component.html
+++ b/Angular Project/src/app/account-creation/account-creation.component.html
@@ -42,10 +42,10 @@
                     class="form-control"
                     [(ngModel)] = "account.jobTitle">
               <option></option>
-              <option *ngFor="let job of jobTitles"
+              <!-- <option *ngFor="let job of jobTitles"
                       [value]="job.id">
                 {{ job.name }}
-              </option>
+              </option> -->
             </select>
           </div>
         </div>
