--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -1,10 +1,48 @@
-<table>
-  <thead>
-    <tr>
-      <th *ngFor="let col of columns">{{col}}</th>
-    </tr>
-    </thead>
-  <tbody>
-    <tr *ngFor="let char of characters | async">{{char[col]}}</tr>
-  </tbody>
-</table>
+
+
+<div class="container mt-4">
+  <a class="btn btn-sm btn-success"
+      routerLink="new">
+      Add New Account
+  </a>
+  <div [ngSwitch]="accounts?.length">
+    <div class="alert" *ngSwitchCase="0">
+      No accounts found.
+    </div>
+    <table *ngSwitchDefault class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <th>
+              Name
+            </th>
+            <th>
+              Type
+            </th>
+            <th>
+              color
+            </th>
+            <th>
+              model
+            </th>
+            <th>
+              capacity
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let v of vehicles; let index = i">
+            <td>{{v.vehicleName}}</td>
+            <td>{{ v.vehicleType }}</td>
+            <td>{{ v.color }}</td>
+            <td>{{v.model}}</td>
+            <td>{{v.capacity}}</td>
+            <td>
+              <button class="btn btn-sm btn-success" (click)=delete(vehicle.id,i)>
+                Add
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+  </div>
+</div>
