Andrew add managerAnchorTable

--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,8 +1,10 @@
-<app-manager></app-manager>
+<!-- <app-manager></app-manager>
 
-<!-- <app-anchor></app-anchor> -->
+<app-anchor></app-anchor>
 
 
-<!-- <app-story [anchor]='anchor'>
+<app-story [anchor]='anchor'>
 
 </app-story> -->
+
+<app-matable></app-matable>
