--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,10 +1,7 @@
-<!-- <app-manager></app-manager>
+ <app-manager></app-manager>
 
-<app-anchor></app-anchor>
+ <!--<app-anchor></app-anchor>
 
+<app-story [anchor]='anchor'></app-story>
 
-<app-story [anchor]='anchor'>
-
-</app-story> -->
-
-<app-matable></app-matable>
+<app-matable></app-matable> -->
