--- a/Angular Project/src/app/matable/matable.component.html
+++ b/Angular Project/src/app/matable/matable.component.html
@@ -18,7 +18,7 @@
       <tbody>
         <tr *ngFor="let account of myAnchors; let i = index">
           <td>
-            {{account.name}}
+            {{account.userName}}
           </td>
           <td>
             {{account.points}}
@@ -49,7 +49,7 @@
       <tbody>
         <tr *ngFor="let account of availableAnchors; let i = index">
           <td>
-            {{account.name}}
+            {{account.userName}}
           </td>
           <td>
             {{account.points}}
