--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -6,14 +6,14 @@
           <!-- try to use index for index based attributes like data-target  -->
           <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
             aria-controls="collapseOne">
-            {{anchor.name}}
+            {{anchor.userName}}
           </button>
         </h5>
       </div>
 
       <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body">
-          <app-anchor [anchor]="this.anchor.userID"></app-anchor>
+          <app-anchor [anchor]="this.anchor"></app-anchor>
         </div>
       </div>
     </div>
@@ -21,5 +21,5 @@
 
 
 
-    <button class="mt-3" id="ROUTE-TO-CLAIM-STORIES-PAGE">Manage Stories</button>
+    <button class="mt-3" id="ROUTE-TO-MATABLE-PAGE">Manage Anchors</button>
   </div>
