--- a/Angular Project/src/app/matable/matable.component.html
+++ b/Angular Project/src/app/matable/matable.component.html
@@ -1,9 +1,8 @@
 <div class="container col-xs-6">
-  <h2 class="sub-header">Equipment
-  </h2>
-  <div [ngSwitch]="myVehicles?.length">
+  <h2 class="sub-header">My Anchors</h2>
+  <div [ngSwitch]="myAnchors?.length">
     <div *ngSwitchCase=0>
-      No Equipment claimed Found.
+      No Accounts Found.
     </div>
     <table *ngSwitchDefault class="table table-striped table-condensed">
       <thead>
@@ -12,18 +11,18 @@
             Name
           </th>
           <th>
-            Type
+            Points
           </th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let equip of myEquipment; let i = index">
+        <tr *ngFor="let account of myAnchors; let i = index">
           <td>
-            {{equip.equipName}}
+            {{account.name}}
           </td>
           <td>
-            {{equip.equipType}}
-            <button (click)="removeEquipment(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
+            {{account.points}}
+            <button (click)="removeAnchor(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
           </td>
         </tr>
       </tbody>
@@ -31,10 +30,10 @@
   </div>
 </div>
 <div class="container col-xs-6">
-  <h2 class="sub-header">Available Equipment</h2>
-  <div [ngSwitch]="availableEquipment?.length">
+  <h2 class="sub-header">Available Anchors</h2>
+  <div [ngSwitch]="availableAnchors?.length">
     <div *ngSwitchCase=0>
-      No Equipment Available.
+      No Accounts Found.
     </div>
     <table *ngSwitchDefault class="table table-striped table-condensed">
       <thead>
@@ -43,22 +42,21 @@
             Name
           </th>
           <th>
-            Type
+            Points
           </th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let equip of availableEquipment; let i = index">
+        <tr *ngFor="let account of availableAnchors; let i = index">
           <td>
-            {{equip.equipName}}
+            {{account.name}}
           </td>
           <td>
-            {{equip.equipType}}
-            <button (click)="addEquipment(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
+            {{account.points}}
+            <button (click)="addAnchor(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
-
