--- a/Angular Project/src/app/vehicle/vehicle.component.css
+++ b/Angular Project/src/app/vehicle/vehicle.component.css
@@ -1,15 +1,9 @@
-nav {
-  margin-bottom: 5em;
-}
-
-h1 {
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
   text-align: center;
-}
-
-#search{
-  float: right;
-  position: relative;
-  top: 30px;
-  right: 10px;
-  z-index: 15000;
+  font-size: 12px;
+  line-height: 1.42857;
 }
