--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -44,7 +44,7 @@
 </div>
 <div class="container col-xs-6">
   <h2 class="sub-header">Available Vehicles</h2>
-  <div [ngSwitch]="availableVehicle?.length">
+  <div [ngSwitch]="availableVehicles?.length">
     <div *ngSwitchCase=0>
       No Vehicles claimed.
     </div>
