--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="card-body">
       <div class="row">
-        <p class="card-text p-3"> {{story.date}}</p>
+        <p class="card-text p-3"> {{story.storyDate}}</p>
       </div>
       <div class="row">
         <p class="card-text p-3"> {{story.startTime}} - {{story.endTime}}</p>
