--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -1,88 +1,74 @@
-<div class="container col-xs-6">
-  <h2 class="sub-header">Vehicles
-  </h2>
-  <div [ngSwitch]="myVehicles?.length">
-    <div *ngSwitchCase=0>
-      No Vehicles claimed Found.
-    </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Type
-          </th>
-          <th>
-            Color
-          </th>
-          <th>
-            Model
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let vehicle of myVehicles; let i = index">
-          <td>
-            {{vehicle.vehicleName}}
-          </td>
-          <td>
-            {{vehicle.vehicleType}}
-          </td>
-          <td>
-            {{vehicle.color}}
-          </td>
-          <td>
-            {{vehicle.model}}
-            <button (click)="removeVehicle(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-<div class="container col-xs-6">
-  <h2 class="sub-header">Available Vehicles</h2>
-  <div [ngSwitch]="availableVehicles?.length">
-    <div *ngSwitchCase=0>
-      No Vehicles claimed.
-    </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Type
-          </th>
-          <th>
-            Color
-          </th>
-          <th>
-            Model
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let vehicle of availableVehicles; let i = index">
-          <td>
-            {{vehicle.vehicleName}}
-          </td>
-          <td>
-            {{vehicle.vehicleType}}
-          </td>
-          <td>
-            {{vehicle.color}}
-          </td>
-          <td>
-            {{vehicle.model}}
-            <button (click)="addVehicle(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+import { Component, OnInit } from '@angular/core';
+import { Vehicle } from '../domain/models/Vehicle';
 
+@Component({
+  selector: 'app-vehicle',
+  templateUrl: './vehicle.component.html',
+  styleUrls: ['./vehicle.component.css']
+})
+export class VehicleComponent implements OnInit {
+  myVehicles: Vehicle [];
+  availableVehicles: Vehicle [];
+  
+
+  constructor() { }
+
+  ngOnInit() {
+
+    this.myVehicles = [
+      {
+        vehicleName:'Name1',
+        vehicleType:'type1',
+        color:'black',
+        model:'model_1'
+      },
+      {
+        vehicleName:'Name2',
+        vehicleType:'type2',
+        color:'red',
+        model:'model_2'
+      },
+      {
+        vehicleName:'Name1',
+        vehicleType:'type1',
+        color:'black',
+        model:'model_1'
+      }
+    ]
+
+    this.availableVehicles = [
+      {
+        vehicleName:'AName',
+        vehicleType:'Atype',
+        color:'some color',
+        model:'its a model'
+      },
+      {
+        vehicleName:'BName',
+        vehicleType:'Btype',
+        color:'green',
+        model:'its a model' 
+      },
+      {
+        vehicleName:'CName',
+        vehicleType:'Ctype',
+        color:'red',
+        model:'its a model'
+      }
+
+  ]
+  }
+
+  addVehicle(index:number){
+    this.myVehicles.push(this.availableVehicles[index]);
+    this.availableVehicles.splice(index, 1);
+  }
+
+  removeVehicle(index: number) {
+    this.availableVehicles.push(this.myVehicles[index]);
+    this.myVehicles.splice(index, 1);
+  }
+
+  
+  
+}
