--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -1,9 +1,13 @@
+<div class="container mt-3">
+  <input class="form-control" id="myInput" type="text" placeholder="Search.." name="term" [(ngModel)] ="term">
+</div>
+
 <div class="container col-xs-6">
   <h2 class="sub-header">Vehicles
   </h2>
   <div [ngSwitch]="myVehicles?.length">
     <div *ngSwitchCase=0>
-      No Vehicles claimed Found.
+      No Vehicles claimed found.
     </div>
     <table *ngSwitchDefault class="table table-striped table-condensed">
       <thead>
@@ -46,7 +50,7 @@
   <h2 class="sub-header">Available Vehicles</h2>
   <div [ngSwitch]="availableVehicle?.length">
     <div *ngSwitchCase=0>
-      No Vehicles claimed.
+      No Vehicles found.
     </div>
     <table *ngSwitchDefault class="table table-striped table-condensed">
       <thead>
@@ -66,7 +70,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let vehicle of availableVehicles; let i = index">
+        <tr *ngFor="let vehicle of availableVehicles | filter: term ; let i = index">
           <td>
             {{vehicle.vehicleName}}
           </td>
