New version of table with http and filtering

--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,11 +1,14 @@
  <!-- <app-manager></app-manager> -->
-
+<!-- 
  <app-login></app-login>
 
 <app-anchor></app-anchor>
 
 <app-story [anchor]='anchor'></app-story>
 
-<app-matable></app-matable> -->
+<app-matable></app-matable>
 
 <app-equipment></app-equipment>
+-->
+
+<app-vehicle></app-vehicle>
