--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -4,9 +4,10 @@
   </mat-form-field>
 </div>
 
-<div class="container col-xs-6">
+<div class="row">
+<div class="col-md-6">
   <h2 class="sub-header">Available Vehicles</h2>
-    <mat-table #table [dataSource]="dataSource"  class="table table-striped table-condensed">
+    <mat-table #table id="tables" [dataSource]="dataSource"  class="table table-striped table-condensed" >
       <ng-container matColumnDef="No.">
         <mat-header-cell *matHeaderCellDef></mat-header-cell>
         <mat-cell *matCellDef="let vehicle"></mat-cell>
@@ -48,9 +49,9 @@
     </mat-table>
   </div>
 
-  <div class="container col-xs-6">
+  <div class="col-md-6" >
     <h2 class="sub-header">MyVehicles</h2>
-      <mat-table #table [dataSource]="dataSource_2"  class="table table-striped table-condensed">
+      <mat-table #table  [dataSource]="dataSource_2"  class="table table-striped table-condensed">
         
 
         <ng-container matColumnDef="Type">
@@ -88,4 +89,5 @@
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
     </div>
+</div>
 
