Updated Equipment Table

--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -8,7 +8,10 @@
 
 <app-matable></app-matable>
 
+<app-vehicle></app-vehicle>
+
 <app-equipment></app-equipment>
 -->
 
-<app-vehicle></app-vehicle>
+
+<app-equipment></app-equipment>
