--- a/Angular Project/src/app/equipment/equipment.component.html
+++ b/Angular Project/src/app/equipment/equipment.component.html
@@ -1,64 +1,63 @@
-<div class="container col-xs-6">
-  <h2 class="sub-header">Equipment
-  </h2>
-  <div [ngSwitch]="myEquipment?.length">
-    <div *ngSwitchCase=0>
-      No Equipment claimed Found.
-    </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Type
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let equip of myEquipment; let i = index">
-          <td>
-            {{equip.equipName}}
-          </td>
-          <td>
-            {{equip.equipType}}
-            <button (click)="removeEquipment(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<div class="filter-bar">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search..">
+  </mat-form-field>
 </div>
-<div class="container col-xs-6">
+
+<div class="row">
+<div class=" container col-md-6">
   <h2 class="sub-header">Available Equipment</h2>
-  <div [ngSwitch]="availableEquipment?.length">
-    <div *ngSwitchCase=0>
-      No Equipment Available.
-    </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Type
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let equip of availableEquipment; let i = index">
-          <td>
-            {{equip.equipName}}
-          </td>
-          <td>
-            {{equip.equipType}}
-            <button (click)="addEquipment(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <mat-table #table id="tables" [dataSource]="dataSource"  class="table table-striped table-condensed" >
+      
+      <ng-container matColumnDef="Type">
+        <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
+        <mat-cell *matCellDef="let equip"> {{equip.equipType}} </mat-cell>
+      </ng-container>
+    
+      
+      <ng-container matColumnDef="Name">
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let equip"> {{equip.equipName}} </mat-cell>
+      </ng-container>
+      
+      <ng-container matColumnDef="actionColumn">
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let row; let i = index">
+            <button class="btn btn-success" (click)="addVehicle(i)">Add</button>
+        </mat-cell>
+    </ng-container>
+    
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
   </div>
+
+  <div class="container col-md-6" >
+    <h2 class="sub-header">My Equipment</h2>
+      <mat-table #table  [dataSource]="dataSource_2"  class="table table-striped table-condensed">
+        
+
+        <ng-container matColumnDef="Type">
+          <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
+          <mat-cell *matCellDef="let equip"> {{equip.equipType}} </mat-cell>
+        </ng-container>
+      
+        
+        <ng-container matColumnDef="Name">
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let equip"> {{equip.equipName}} </mat-cell>
+        </ng-container>
+      
+        <ng-container matColumnDef="actionColumn">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let row;let i = index">
+              <button class="btn btn-danger" (click)="removeVehicle(i)">Remove</button>
+          </mat-cell>
+      </ng-container>
+      
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </div>
 </div>
 
