--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-<div class="col-md-6">
+<div class=" container col-md-6">
   <h2 class="sub-header">Available Vehicles</h2>
     <mat-table #table id="tables" [dataSource]="dataSource"  class="table table-striped table-condensed" >
       <ng-container matColumnDef="No.">
@@ -49,8 +49,8 @@
     </mat-table>
   </div>
 
-  <div class="col-md-6" >
-    <h2 class="sub-header">MyVehicles</h2>
+  <div class="container col-md-6" >
+    <h2 class="sub-header">My Vehicles</h2>
       <mat-table #table  [dataSource]="dataSource_2"  class="table table-striped table-condensed">
         
 
