Updated Equipment Table

--- a/Angular Project/src/app/equipment/equipment.component.html
+++ b/Angular Project/src/app/equipment/equipment.component.html
@@ -23,7 +23,7 @@
       <ng-container matColumnDef="actionColumn">
         <mat-header-cell *matHeaderCellDef></mat-header-cell>
         <mat-cell *matCellDef="let row; let i = index">
-            <button class="btn btn-success" (click)="addVehicle(i)">Add</button>
+            <button class="btn btn-success" (click)="addEquipment(i)">Add</button>
         </mat-cell>
     </ng-container>
     
@@ -51,7 +51,7 @@
         <ng-container matColumnDef="actionColumn">
           <mat-header-cell *matHeaderCellDef></mat-header-cell>
           <mat-cell *matCellDef="let row;let i = index">
-              <button class="btn btn-danger" (click)="removeVehicle(i)">Remove</button>
+              <button class="btn btn-danger" (click)="removeEquipment(i)">Remove</button>
           </mat-cell>
       </ng-container>
       
