--- a/Angular Project/src/app/expert/expert.component.html
+++ b/Angular Project/src/app/expert/expert.component.html
@@ -1,64 +1,65 @@
-<div class="container col-xs-6">
-  <h2 class="sub-header">Expert
-  </h2>
-  <div [ngSwitch]="myExpert?.length">
-    <div *ngSwitchCase=0>
-      No Experts claimed Found.
-    </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Topic
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let exp of myExpert; let i = index">
-          <td>
-            {{exp.expertName}}
-          </td>
-          <td>
-            {{exp.expertTopic}}
-            <button (click)="removeExpert(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<div class="filter-bar">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search...">
+  </mat-form-field>
 </div>
-<div class="container col-xs-6">
+
+<div class="row">
+<div class=" container col-md-6">
   <h2 class="sub-header">Available Experts</h2>
-  <div [ngSwitch]="availableExperts?.length">
-    <div *ngSwitchCase=0>
-      No Experts Available.
-    </div>
-    <table *ngSwitchDefault class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th class="w-50">
-            Name
-          </th>
-          <th>
-            Topic
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let exp of availableExpert; let i = index">
-          <td>
-            {{exp.expertName}}
-          </td>
-          <td>
-            {{exp.expertTopic}}
-            <button (click)="addExpert(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <mat-table #table id="tables" [dataSource]="dataSource"  class="table table-striped table-condensed" >
+      
+
+      <ng-container matColumnDef="Name">
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let e"> {{e.expertName}} </mat-cell>
+      </ng-container>
+    
+      
+      <ng-container matColumnDef="Topic">
+        <mat-header-cell *matHeaderCellDef> Topic</mat-header-cell>
+        <mat-cell *matCellDef="let e"> {{e.expertTopic}} </mat-cell>
+      </ng-container>
+      
+      <ng-container matColumnDef="actionColumn">
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let row; let i = index">
+            <button class="btn btn-success" (click)="addExpert(i)">Add</button>
+        </mat-cell>
+    </ng-container>
+    
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
   </div>
+
+  <div class="container col-md-6" >
+    <h2 class="sub-header">My Experts</h2>
+      <mat-table #table  [dataSource]="dataSource_2"  class="table table-striped table-condensed">
+        
+
+        <ng-container matColumnDef="Name">
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let e"> {{e.expertName}} </mat-cell>
+        </ng-container>
+      
+        
+        <ng-container matColumnDef="Topic">
+          <mat-header-cell *matHeaderCellDef> Topic</mat-header-cell>
+          <mat-cell *matCellDef="let e"> {{e.expertTopic}} </mat-cell>
+        </ng-container>
+  
+        
+        <ng-container matColumnDef="actionColumn">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let row;let i = index">
+              <button class="btn btn-danger" (click)="removeExpert(i)">Remove</button>
+          </mat-cell>
+      </ng-container>
+      
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </div>
 </div>
 
