Started proper routing

--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,6 +1,8 @@
- <!-- <app-manager></app-manager> -->
+ <router-outlet></router-outlet>
 
- <app-login></app-login>
+ <!-- <app-manager></app-manager> -->
+<!--
+ <app-login></app-login> -->
 
  <!--<app-anchor></app-anchor>
 
