--- a/Angular Project/src/app/anchor/anchor.component.html
+++ b/Angular Project/src/app/anchor/anchor.component.html
@@ -1,15 +1,7 @@
-<<<<<<< HEAD
-
-=======
 <!-- <app-navbar></app-navbar>
 <app-welcome></app-welcome> -->
 <div *ngFor="let story of myStories">
   <app-story [anchor]='anchor' [story]="story"></app-story>
 </div>
 
-
-<!-- MIGHT NEED
-[story] = "story"
--->
-<button class="ROUTE TO CLAIM STORIES PAGE">Manage Stories</button>
->>>>>>> d497c910f415615d5b98fb50553bffdd3e4af34a
+<button [routerLink]="['/manageStories', anchor.userID]" >Manage Stories</button>
