--- a/Angular Project/src/app/login/login.component.html
+++ b/Angular Project/src/app/login/login.component.html
@@ -1,52 +1,50 @@
-
-<div class="background"></div>
-
-
-<div class="User_interaction">
-  <h2>Welcome!</h2>
-  <p>If you are a new user click, New User.</p>
-  <button id="NewUser" type="button" class="btn btn-primary" routerLink='../register'>New User</button>
-  <p>If not, click Login.</p>
-  <button id="login" type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">Login</button>
+<!-- <div class="login">
+  <form>
+    <div class="input-group p-3">
+      <input type="text" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" class="form-control make-smaller"
+        placeholder="Email" aria-label="Email">
+    </div>
+    <div class="input-group p-3">
+      <input type="text" [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" class="form-control make-smaller"
+        placeholder="Password" aria-label="Password">
+    </div>
+  </form>
 </div>
+<div class="modal-footer">
+  <button type="button" (click)="login()" class="btn btn-primary">Login</button>
+</div> -->
 
 
-
-<!-- Modal -->
-<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModal" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="LoginModal">Login</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+<div class="container">
+    <h1>Login</h1>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-header">
+            Account Information
+          </div>
+          <div class="card-body">
+            <div class="form-group">
+              <label for="account_name">
+                Email
+              </label>
+              <input type="text" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" class="form-control"
+        placeholder="Email" aria-label="Email">
+            </div>
+            <div class="form-group">
+              <label for="account_password">
+                Password
+              </label>
+              <input type="text" [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" class="form-control"
+        placeholder="Password" aria-label="Password">
+            </div>
+          </div>
+        </div>
+        <br />
+        <button class="btn btn-lg btn-success btn-block" type="button" (click)="login()">
+          Login
         </button>
       </div>
-
-      <!-- <div class="modal-body">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn btn-secondary active">
-            <input type="radio" name="options" id="option1" autocomplete="off" checked> Manager
-          </label>
-          <label class="btn btn-secondary">
-            <input type="radio" name="options" id="option2" autocomplete="off"> Anchor
-          </label>
-        </div>
-      </div> -->
-      <div class="login">
-        <form>
-          <div class="input-group p-3">
-            <input type="text" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" class="form-control make-smaller" placeholder="Email" aria-label="Email">
-          </div>
-          <div class="input-group p-3">
-            <input type="text" [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" class="form-control make-smaller" placeholder="Password" aria-label="Password">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" (click)="login()" class="btn btn-primary">Login</button>
-      </div>
-
     </div>
   </div>
-</div>
+
