--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -3,7 +3,7 @@
   </h2>
   <div [ngSwitch]="myStories?.length">
     <div *ngSwitchCase=0>
-      No Equipment claimed Found.
+      No stories claimed.
     </div>
     <table *ngSwitchDefault class="table table-striped table-condensed">
       <thead>
@@ -34,7 +34,7 @@
   <h2 class="sub-header">Available Stories</h2>
   <div [ngSwitch]="availableStories?.length">
     <div *ngSwitchCase=0>
-      No Equipment Available.
+      No stories available.
     </div>
     <table *ngSwitchDefault class="table table-striped table-condensed">
       <thead>
