--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -59,5 +59,6 @@
         </tr>
       </tbody>
     </table>
+    <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', thisAnchor.userID]">Return to Dashboard</button>
   </div>
 </div>
