--- a/Angular Project/src/app/app.component.html
+++ b/Angular Project/src/app/app.component.html
@@ -1,5 +1,5 @@
  <!-- <app-manager></app-manager> -->
-<!-- 
+<!---
  <app-login></app-login>
 
 <app-anchor></app-anchor>
@@ -7,11 +7,12 @@
 <app-story [anchor]='anchor'></app-story>
 
 <app-matable></app-matable>
+<app-expert></app-expert>
 
 <app-vehicle></app-vehicle>
+<app-expert></app-expert>
 
 <app-equipment></app-equipment>
 -->
 
-
-<app-expert></app-expert>
+<app-equipment></app-equipment>
