--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -18,7 +18,7 @@
           <div class="card mt-4" style="width: 18rem;">
             <div class="card-header">
               Vehicles
-              <button type="button" class="btn btn-primary float-right">Edit</button>
+              <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageVehicles', story.storyID]">Edit</button>
             </div>
             <div *ngIf="vehicles.length">
               <ul class="list-group list-group-flush">
@@ -34,7 +34,7 @@
           <div class="card mt-4" style="width: 18rem;">
             <div class="card-header">
               Experts
-              <button type="button" class="btn btn-primary float-right">Edit</button>
+              <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageExperts', story.storyID]">Edit</button>
             </div>
             <div *ngIf="experts.length">
               <ul class="list-group list-group-flush">
@@ -52,7 +52,7 @@
           <div class="card mt-4" style="width: 18rem;">
             <div class="card-header">
               Equipment
-              <button type="button" class="btn btn-primary float-right">Edit</button>
+              <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageEquipment', story.storyID]">Edit</button>
             </div>
             <div *ngIf="equipment.length">
               <ul class="list-group list-group-flush ">
