--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -1,93 +1,96 @@
-<div class="filter-bar">
-  <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-  </mat-form-field>
-</div>
-
-<div class="row">
-<div class=" container col-md-6">
-  <h2 class="sub-header">Available Vehicles</h2>
-    <mat-table #table id="tables" [dataSource]="dataSource"  class="table table-striped table-condensed" >
-      <ng-container matColumnDef="No.">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let vehicle"></mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="Type">
-        <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
-        <mat-cell *matCellDef="let vehicle"> {{vehicle.vehicleType}} </mat-cell>
-      </ng-container>
-    
-      
-      <ng-container matColumnDef="Name">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let vehicle"> {{vehicle.vehicleName}} </mat-cell>
-      </ng-container>
-    
-      
-      <ng-container matColumnDef="Color">
-        <mat-header-cell *matHeaderCellDef> Color </mat-header-cell>
-        <mat-cell *matCellDef="let vehicle"> {{vehicle.color}} </mat-cell>
-      </ng-container>
-    
-      
-      <ng-container matColumnDef="Model">
-        <mat-header-cell *matHeaderCellDef> Model </mat-header-cell>
-        <mat-cell *matCellDef="let vehicle"> {{vehicle.model}} </mat-cell>
-      </ng-container>
-
-      
-      <ng-container matColumnDef="actionColumn">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let row; let i = index">
-            <button class="btn btn-success" (click)="addVehicle(i)">Add</button>
-        </mat-cell>
-    </ng-container>
-    
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+<div *ngIf="thisStory">
+  <div class="filter-bar">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
   </div>
 
-  <div class="container col-md-6" >
-    <h2 class="sub-header">My Vehicles</h2>
-      <mat-table #table  [dataSource]="dataSource_2"  class="table table-striped table-condensed">
-        
+  <div class="row">
+    <div class=" container col-md-6">
+      <h2 class="sub-header">Available Vehicles</h2>
+      <mat-table #table id="tables" [dataSource]="dataSource" class="table table-striped table-condensed">
+        <ng-container matColumnDef="No.">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let vehicle"></mat-cell>
+        </ng-container>
 
         <ng-container matColumnDef="Type">
           <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
           <mat-cell *matCellDef="let vehicle"> {{vehicle.vehicleType}} </mat-cell>
         </ng-container>
-      
-        
+
+
         <ng-container matColumnDef="Name">
           <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
           <mat-cell *matCellDef="let vehicle"> {{vehicle.vehicleName}} </mat-cell>
         </ng-container>
-      
-        
+
+
         <ng-container matColumnDef="Color">
           <mat-header-cell *matHeaderCellDef> Color </mat-header-cell>
           <mat-cell *matCellDef="let vehicle"> {{vehicle.color}} </mat-cell>
         </ng-container>
-      
-        
+
+
         <ng-container matColumnDef="Model">
           <mat-header-cell *matHeaderCellDef> Model </mat-header-cell>
           <mat-cell *matCellDef="let vehicle"> {{vehicle.model}} </mat-cell>
         </ng-container>
-  
-        
+
+
         <ng-container matColumnDef="actionColumn">
           <mat-header-cell *matHeaderCellDef></mat-header-cell>
-          <mat-cell *matCellDef="let row;let i = index">
-              <button class="btn btn-danger" (click)="removeVehicle(i)">Remove</button>
+          <mat-cell *matCellDef="let row; let i = index">
+            <button class="btn btn-success" (click)="addVehicle(i)">Add</button>
           </mat-cell>
-      </ng-container>
-      
+        </ng-container>
+
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
     </div>
-</div>
 
+    <div class="container col-md-6">
+      <h2 class="sub-header">My Vehicles</h2>
+      <mat-table #table [dataSource]="dataSource_2" class="table table-striped table-condensed">
+
+
+        <ng-container matColumnDef="Type">
+          <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
+          <mat-cell *matCellDef="let vehicle"> {{vehicle.vehicleType}} </mat-cell>
+        </ng-container>
+
+
+        <ng-container matColumnDef="Name">
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let vehicle"> {{vehicle.vehicleName}} </mat-cell>
+        </ng-container>
+
+
+        <ng-container matColumnDef="Color">
+          <mat-header-cell *matHeaderCellDef> Color </mat-header-cell>
+          <mat-cell *matCellDef="let vehicle"> {{vehicle.color}} </mat-cell>
+        </ng-container>
+
+
+        <ng-container matColumnDef="Model">
+          <mat-header-cell *matHeaderCellDef> Model </mat-header-cell>
+          <mat-cell *matCellDef="let vehicle"> {{vehicle.model}} </mat-cell>
+        </ng-container>
+
+
+        <ng-container matColumnDef="actionColumn">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let row;let i = index">
+            <button class="btn btn-danger" (click)="removeVehicle(i)">Remove</button>
+          </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </div>
+  </div>
+  <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', thisStory.anchorID]">Return
+    to Dashboard</button>
+</div>
