Started manager routing and added navbar to each page

--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="thisAnchor">
+  <app-navbar></app-navbar>
   <div class="container col-xs-6">
     <h2 class="sub-header">Stories
     </h2>
