--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -21,5 +21,5 @@
 
 
 
-    <button class="mt-3" id="ROUTE-TO-MATABLE-PAGE">Manage Anchors</button>
+    <button class="btn btn-primary" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
   </div>
