--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="thisStory">
+  <app-navbar></app-navbar>
   <div class="filter-bar">
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
