--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -1,16 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="#">AnchorManagement</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <li class="nav-item">
-      <a class="nav-link" href="#" (click)="logout()">Logout</a>
-    </li>
+ <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Anchor Management</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon">
+      </span>
+    </button>
 
-    <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Create Account</a>
-      </li> -->
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="navbarToggle">
+    <ul>
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false">
+          Logout
+        </a>
+      </li>
+    </ul>
+    </div>
+
+
+
+    
+  </nav>
