Starting to work on tables one more error to be fixed

--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -1,18 +1,13 @@
  <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Anchor Management</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">
-      </span>
+      <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarToggle">
-    <ul>
-      
-        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false">
-          Logout
-        </a>
-     
-    </ul>
+      <ul>
+          <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
+      </ul>
     </div>
 
 
