Starting on the homepage

--- a/Angular Project/src/app/anchor/anchor.component.html
+++ b/Angular Project/src/app/anchor/anchor.component.html
@@ -1,7 +1,7 @@
 <!-- <app-navbar></app-navbar>
 <app-welcome></app-welcome> -->
 
-<button [routerLink]="['/manageStories', anchor.userID]" class="btn btn-primary">Manage Stories</button>
+<button [routerLink]="['/manageStories', anchor.userID]" id="man-btn" class="btn btn-primary">Manage Stories</button>
 
 <div *ngFor="let story of myStories">
   <app-story [anchor]='anchor' [story]="story"></app-story>
